gwang_feat: Club Search